# Backend-project-SaberAngola

./: .replit  manage.py  pyproject.toml  replit.md
apps/authentication/: admin.py  models.py  urls.py
apps/core/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/documents/: admin.py  models.py  serializers.py  services.py  tasks.py  utils.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
attached_assets/: Pasted-I-ve-successfully-implemented-a-comprehensive-Django-backend-system-for-SaberAngola-with-extensive-f-1758789168020_1758789168030.txt
authentication/: admin.py  models.py  views.py
authentication/migrations/: 0001_initial.py  0002_initial.py
documents/: admin.py  models.py  urls.py  utils.py  views.py
documents/migrations/: 0001_create_initial_documents_schema.py  0001_initial.py  0002_add_template_categories_and_price.py  0002_initial.py
health/: admin.py  urls.py  views.py
payments/: admin.py  models.py  services.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
saberangola/: admin.py  asgi.py  celery.py  middleware.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
saberangola/settings/: __init__.py  base.py  dev.py  prod.py
templates/: dashboard.html
templates/admin/: base_site.html  index.html
users/: admin.py  models.py  urls.py  views.py
(+13 files in other folders)
